# DataladExtensionCDS

./: .appveyor.yml  .gitattributes  .gitignore  CONTRIBUTORS  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test.json
.github/workflows/: docbuild.yml  test_crippledfs.yml
datalad_cds_extension/: __init__.py  _version.py  cds.py  cdsext.py  cdsrequest.py  compat.py  downloadcds.py  git-annex-remote-cdsrequest  remote.py  spec.py  test.py
datalad_cds_extension/customremotes/: cdsremote.py  git-annex-remote-cds
datalad_cds_extension/tests/: test_register.py
docs/: Makefile
docs/source/: conf.py  index.rst
