[project]
name = "datalad-cds-extension"
description = "DataLad extension for downloading from cds api"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "The DataLad Team and Contributors", email = "team@datalad.org" },
  { name = "Laurens Jan van Haaaren", email = "l.van.haaren@fz-juelich.de" },
]
maintainers = [
  { name = "Laurens Jan van Haaaren", email = "l.van.haaren@fz-juelich.de" },
]
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]

dependencies = [
  "datalad>=0.17.0",
  "annexremote>=1.6.0",
  "cdsapi>=0.5.1",
]
[project.entry-points."datalad.extensions"]
download-cds = "datalad_cds_extension:command_suite"

[build-system]
requires = ["setuptools >= 43.0.0", "wheel"]
[project.scripts]
git-annex-remote-cdsrequest = "datalad_cds_extension.cdsrequest:main"